ADD: css clock, css variables

--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -68,7 +68,7 @@
     key.classList.add('playing');
   }
 
-  function removeTransition(e) {
+  function removeTransition(e) {jav
     if(e.propertyName !== 'transform') return;
     this.classList.remove('playing');
   }
